--- a/DairyProject/templates/category/product_detail.html
+++ b/DairyProject/templates/category/product_detail.html
@@ -1,75 +1,101 @@
-django
+<!-- product_detail.html -->
+
 {% extends "layout/main.html" %}
+{% load static %}
 
 {% block body %}
-    <form method="GET" action="">
-        <div class="border-start ps-4 d-none d-lg-flex justify-content-end" style="float: right;">
-            <div class="input-group">
-                <input type="text" class="form-control" name="query" placeholder="Search..." aria-label="Search" value="{{ request.GET.query }}">
-                <button class="btn btn-sm btn-primary" type="submit"><i class="fa fa-search"></i></button>
+
+
+<div class="container-fluid">
+    <div class="row">
+        <!-- Sidebar -->
+        <div class="col-md-1">
+            <div class="list-group">
+                <a href="?category=Milk" class="list-group-item">Milk</a>
+                <a href="?category=Curd" class="list-group-item">Curd</a>
+                <a href="?category=Paneer" class="list-group-item">Paneer</a>
+                <a href="?category=Ghee" class="list-group-item">Ghee</a>
+                <a href="?category=Butter" class="list-group-item">Butter</a>
             </div>
         </div>
-    </form>
 
-    <div>
-        {% if products %}
-            <ul>
-                {% for product in products %}
-                    {{ product.p_name }}
-                {% empty %}
-                    <li>No products found.</li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <p>No products found.</p>
-        {% endif %}
-    </div>
-
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row gx-4">
-                {% for product in products %}
-                    <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="{{ forloop.counter }}">
-                        <div class="product-item">
-                            <div class="position-relative">
-                                <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}" style="height: 200px; width: 200px;">
-                                <div class="product-overlay">
-                                    <a class="btn btn-square btn-secondary rounded-circle m-1" href=""><i class="bi bi-link"></i></a>
-                                    <a class="btn btn-square btn-secondary rounded-circle m-1" href="javascript:void(0);" onclick="addToWishlist('{{ product.id }}')">
-                                        <i id="heart-{{ product.id }}" class="bi bi-heart" style="color: black;"></i>
-                                    </a>
+        <!-- Product Content -->
+        <div class="col-md-9">
+            <div class="container-xxl py-5">
+                <div class="container">
+                    <div class="row gx-4">
+                        {% for product in products %}
+                        <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="{{ forloop.counter }}">
+                            <div class="product-item">
+                                <div class="position-relative">
+                                    <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}" style="height: 200px; width: 200px;">
+                                    <div class="product-overlay">
+                                        <a class="btn btn-square btn-secondary rounded-circle m-1" href="#" data-bs-toggle="modal" data-bs-target="#productModal{{ product.id }}">
+                                            <i id="heart-{{ product.id }}" class="bi bi-heart" style="color: black;"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="text-center p-4">
+                                    <a class="d-block h5" href="#">{{ product.name }}</a>
+                                    <span class="text-primary me-1">₹{{ product.price }}</span>
                                 </div>
                             </div>
-                            <div class="text-center p-4">
-                                <a class="d-block h5" href="#">{{ product.name }}</a>
-                                <span class="text-primary me-1">₹{{ product.price }}</span>
-                                <p>Manufactured on: {{product.upload_datetime|date:"F j, Y, g:i a"}}
-                                </p>
-                                <span class="text-primary me-1">{{ product.description }}</span>
-                                {% if product.discounted_price %}
-                                    <span class="text-decoration-line-through">₹{{ product.discounted_price }}</span>
-                                {% endif %}
+                        </div>
+
+                        <!-- Product Modal -->
+                        <div class="modal fade" id="productModal{{ product.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">{{ product.name }}</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img class="img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                        <p>{{ product.description }}</p>
+                                        <p>Price: ₹{{ product.price }}</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <form method="post" id="wishlistForm">{% csrf_token %}</form>
+
+                                        <!-- Add wishlist and order buttons here -->
+                                        <button type="button" class="btn btn-primary" onclick="addToWishlist('{{ product.id }}')">Add to Wishlist</button>
+                                        <button type="button" class="btn btn-success">Make Order</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        <!-- End Product Modal -->
+
+                        {% endfor %}
                     </div>
-                {% endfor %}
+                </div>
             </div>
         </div>
     </div>
+</div>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        function addToWishlist(productId) {
-            // Send an AJAX request to save the product details to the wishlist table
-            $.ajax({
-                type: "POST",
-                url: "{% url 'wishlist' %}",  // Replace with your Django URL for adding to the wishlist
-                data: { product_id: productId },
-                success: function (data) {
-                    // Change the heart color to red
-                    $("#heart-" + productId).css("color", "red");
-                },
-            });
-        }
-    </script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function addToWishlist(productId) {
+        // Get the CSRF token value
+        var csrftoken = $("[name=csrfmiddlewaretoken]").val();
+
+        // Send an AJAX request to save the product details to the wishlist table
+        $.ajax({
+            type: "POST",
+            url: "{% url 'wishlist' %}",  // Replace with your Django URL for adding to the wishlist
+            data: {
+                product_id: productId,
+                csrfmiddlewaretoken: csrftoken,  // Include the CSRF token in the data
+            },
+            success: function (data) {
+                // Change the heart color to red
+                $("#heart-" + productId).css("color", "red");
+            },
+        });
+    }
+</script>
 {% endblock %}
