--- a/DairyProject/templates/category/wishlist.html
+++ b/DairyProject/templates/category/wishlist.html
@@ -1,13 +1,20 @@
-{% extends "layout/main.html" %}
+<!-- wishlist.html -->
 
+{% extends "layout/main.html" %}
 {% block body %}
-    <h1>My Wishlist</h1>
+
+<div class="container mt-5">
+    <h2>Wishlist</h2>
     <ul>
-        {% for item in wishlist_items %}
-            <li>
-                <a href="{% url 'product_detail' item.product.p_code %}">{{ item.product.p_name }}</a>
-                <a href="{% url 'remove_from_wishlist' item.product.p_code %}">Remove</a>
+        <!-- wishlist.html -->
+<h2>Wishlist</h2>
+<ul>
+    {% for item in wishlist_items %}
+        <li>{{ item.product.name }} - {{ item.product.price }}</li>
+                <a href="{% url 'remove_from_wishlist' product_id=item.product.p_code %}">Remove</a>
             </li>
         {% endfor %}
     </ul>
+</div>
+
 {% endblock %}
