--- a/DairyProject/templates/cattle/view_cattle.html
+++ b/DairyProject/templates/cattle/view_cattle.html
@@ -1,4 +1,6 @@
-{% load static %}
+<!-- cattle_details.html -->
+
+    {% load static %}
     <div class="container">
         <h1>Cattle Details</h1>
 
@@ -57,4 +59,3 @@
             $('#cattle-table').DataTable();
         });
     </script>
-</div>
