--- a/DairyProject/templates/dash/s_dashboard.html
+++ b/DairyProject/templates/dash/s_dashboard.html
@@ -138,7 +138,7 @@
             {{ user.first_name }}
         </div>
     </div>
-        <a href="$" data-url="$"><i class="fas fa-user-edit"></i> Complete Profile</a>
+        <a href="{% url 'complete_prof' %}" data-url="{% url 'complete_prof' %}"><i class="fas fa-user-edit"></i> Complete Profile</a>
         <a href="{% url 'milk_view' %}" data-url="{% url 'milk_view' %}"><i class="fas fa-key"></i> Todays Collection</a>
         <a href="{% url 'prod_view' %}" data-url="{% url 'prod_view' %}"><i class="fas fa-chart-bar"></i> Product</a>
         <a href="{% url 'view_cattle' %}" data-url="{% url 'add_cattle' %}"><i class="fas fa-chart-bar"></i>Cattle</a>
