--- a/DairyProject/templates/layout/main.html
+++ b/DairyProject/templates/layout/main.html
@@ -49,7 +49,7 @@
                                 <div class="col-lg-8 text-start">
                                     <p class="fs-4 text-darkblue">Welcome to our dairy farm</p>
                                     <h1 class="display-1 text-darkblue mb-5 animated ">The Farm of Dairy products</h1>
-                                    <a href="{% url 'login' %}" class="btn btn-secondary rounded-pill py-3 px-5  ">Login</a>
+                                    <a href="{% url 'login' %}" id="show-modal-button"class="btn btn-secondary rounded-pill py-3 px-5  ">Login</a>
                                     <a href="{% url 'select' %}" class="btn btn-secondary rounded-pill py-3 px-5  ">SignUp</a>
                                 </div>
                             </div>
