--- a/DairyProject/templates/cattle/edit_cattle.html
+++ b/DairyProject/templates/cattle/edit_cattle.html
@@ -1,28 +1,6 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Edit Cattle</title>
-</head>
-<body>
-<!-- edit_cattle.html -->
-<h1>Edit Cattle</h1>
-
-<form method="post" enctype="multipart/form-data">
+<h2>Edit Cattle</h2>
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Save Changes</button>
-</form>
-
-    <script>
-        document.getElementById("vaccination_yes").addEventListener("change", function() {
-            var vaccinationDetails = document.getElementById("vaccination_details");
-            vaccinationDetails.style.display = this.checked ? "block" : "none";
-        });
-        document.getElementById("insurance_yes").addEventListener("change", function() {
-            var insuranceDetails = document.getElementById("insurance_details");
-            insuranceDetails.style.display = this.checked ? "block" : "none";
-        });
-    </script>
-</body>
-</html>
+  </form>
