--- a/DairyProject/templates/profile_edit/seller_profile.html
+++ b/DairyProject/templates/profile_edit/seller_profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +12,13 @@
             margin: 0;
             padding: 0;
         }
-        
+
         .container {
             width: 80%;
             margin: 0 auto;
             padding: 20px;
         }
-        
+
         .profile-section {
             background-color: #ffffff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -25,13 +26,13 @@
             padding: 20px;
             margin-bottom: 20px;
         }
-        
+
         .profile-section p {
             margin: 10px 0;
             font-size: 16px;
             color: #333;
         }
-        
+
         .edit-profile-link {
             display: inline-block;
             background-color: #63a6ed;
@@ -42,17 +43,18 @@
             margin-top: 20px;
             transition: background-color 0.3s ease-in-out;
         }
-        
+
         .edit-profile-link:hover {
             background-color: #b8cde4;
         }
-        
+
         h1 {
             color: #333;
             margin-bottom: 20px;
         }
-            </style>
+    </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Seller Profile</h1>
@@ -61,12 +63,20 @@
             <p>Last Name: {{ seller_profile.last_name }}</p>
             <p>Email: {{ seller_profile.email }}</p>
             <p>Mobile: {{ seller_profile.mobile }}</p>
-            <p>Farmer License: {{ seller_profile.farmer_license }}</p>
-
-
+            <p>House Name: {{ seller_profile.house_name }}</p>
+            <p>City: {{ seller_profile.city }}</p>
+            <p>Pin Code: {{ seller_profile.pin_code }}</p>
+            <p>Occupation: {{ seller_profile.occupation }}</p>
+            <p>Gender: {{ seller_profile.get_gender_display }}</p>
+            <p>Date of Birth: {{ seller_profile.dob }}</p>
+            <p>Ration Card No: {{ seller_profile.rationcard_no }}</p>
+            <p>Account No: {{ seller_profile.acc_no }}</p>
+            <p>Society: {{ seller_profile.society }}</p>
+            <p>Profile Photo: <img src="{{ seller_profile.profile_photo.url }}" alt="Profile Photo" height="100" width="100"></p>
+            <!-- Add other details as needed -->
             <a href="{% url 'complete_s_profile' %}" class="edit-profile-link">Edit Profile</a>
         </div>
     </div>
 </body>
-</html>
 
+</html>
