--- a/DairyProject/templates/dash/a_dashboard.html
+++ b/DairyProject/templates/dash/a_dashboard.html
@@ -131,7 +131,10 @@
                 <li><a href="{% url 'product_detail' %}"><i class="fas fa-users"></i> Product Availability</a></li>
                 <li><a href="{% url 'c_view' %}"><i class="fas fa-users"></i>Orders</a></li>
                 <li><a href="{% url 'milk_details' %}"><i class="fas fa-users"></i>Milk Collection</a></li>
+                <li><a href="{% url 'add_breed' %}"><i class="fas fa-users"></i>Breed</a></li>
+
                 <li>
+
                     <a href="#" id="reports-dropdown" class="dropdown-toggle">
                         <i class="fas fa-file"></i> Reports
                         <i class="fas fa-caret-down"></i>
