--- a/DairyProject/templates/cattle/delete_cattle.html
+++ b/DairyProject/templates/cattle/delete_cattle.html
@@ -1,16 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Delete Cattle</title>
-</head>
-<body>
-    <h1>Delete Cattle</h1>
-    <p>Are you sure you want to delete this cattle record?</p>
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit">Yes, Delete</button>
-        <a href="{% url 'view_cattle' %}">Cancel</a>
-    </form>
-</body>
-</html>
+<!-- delete_cattle.html -->
+
+<h2>Delete Cattle</h2>
+<p>Are you sure you want to delete this cattle?</p>
+<form method="post">
+  {% csrf_token %}
+  <button type="submit">Confirm Delete</button>
+</form>
