--- a/DairyProject/templates/dash/a_dashboard.html
+++ b/DairyProject/templates/dash/a_dashboard.html
@@ -109,7 +109,7 @@
 </head>
 <div id="navbar" style="background-color: #67b2e8; color: #fff; padding: 20px; display: flex; justify-content: space-between; align-items: center;">
     <div class="logo" style="text-align: left;">
-        <a href="$" style="text-decoration: none; color: #fff;">
+        <a href="{% url 'profile' %}" style="text-decoration: none; color: #fff;">
             <i class="fas fa-user admin-profile-icon"></i> Admin
         </a>
     </div>
@@ -123,7 +123,7 @@
         <!-- sidebar.html -->
         <div class="sidebar">
             <ul class="menu">
-                <li><a href="$"><i class="fas fa-home"></i> Profile</a></li>
+                <li><a href="{% url 'milk_details' %}"><i class="fas fa-home"></i> Profile</a></li>
                 <li><a href="{% url 's_view' %}"><i class="fas fa-users"></i>Seller</a></li>
                 <li><a href="{% url 'view_cattle' %}"><i class="fas fa-users"></i> Cattle</a></li>
                 <li><a href="{% url 'prod_view' %}"><i class="fas fa-chart-bar"></i> View Product</a></li>
@@ -183,7 +183,7 @@
         });
 
         // Load default content (e.g., Profile) on page load
-        loadContent("$");
+        loadContent(milk_details);
     </script>
 </body>
 </html>
